--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angular-6-social-login": "^1.1.1",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "moment": "^2.23.0",
     "ng-simple-slideshow": "^1.2.6",
+    "ng2-completer": "^2.0.8",
     "ngx-bootstrap": "^3.0.1",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
